testsuite/features/compile-fail/assertion.verona
// Copyright Microsoft and Project Verona Contributors.
// SPDX-License-Identifier: MIT
class A {}
class B {}
class Main { main() {} }

class Cell[X] { value: X; }

// CHECK-L: assertion.verona:${LINE:+1}:1: error: Static assertion failed, 'A' is a subtype of 'A'
static_assert(A not subtype A);

// CHECK-L: assertion.verona:${LINE:+1}:1: error: Static assertion failed, 'A' is not a subtype of 'B'
static_assert(A subtype B);

// CHECK-L: assertion.verona:${LINE:+1}:1: error: Static assertion failed, 'A' is a subtype of '(A | B)'
static_assert(A not subtype (A | B));

// CHECK-L: assertion.verona:${LINE:+1}:1: error: Static assertion failed, 'X' is a subtype of 'X'
static_assert[X](X not subtype X);

// CHECK-L: assertion.verona:${LINE:+1}:1: error: Static assertion failed, 'Cell[X]' is a subtype of 'Cell[X]'
static_assert[X](Cell[X] not subtype Cell[X]);

// CHECK-L: assertion.verona:${LINE:+1}:1: error: Static assertion failed, 'Cell[X]' is not a subtype of 'Cell[A]'
static_assert[X](Cell[X] subtype Cell[A]);

// CHECK-L: assertion.verona:${LINE:+1}:1: error: Static assertion failed, 'X' is not a subtype of 'Y'
static_assert[X, Y](X subtype Y);
